# FakeTauFilterXaod

./: CMakeLists.txt
FakeTauFilterXaod/: AcceptanceHadHad.h  FakeTauFilterXaod.h  FakeTauFilterXaodDict.h  FilterValidation.h  FilterValidator.h  HistogramsBook.h  IFakeTauFilterXaod.h  Utils.h  selection.xml
Root/: AcceptanceHadHad.cxx  FakeTauFilterXaod.cxx  FilterValidation.cxx  FilterValidator.cxx  HistogramsBook.cxx  LinkDef.h
cmt/: Makefile.RootCore
scripts/: acceptance  plot-jets  plot-validation  samples.py  scan-eos  validator
util/: validator.cxx
